# python-esilib

./: .gitignore  README.md  esilib.code-workspace  setup.cfg
src/: Pipfile  domain_generator.py
src/esilib/: __init__.py  client.py  exceptions.py  models.py  security.py
src/esilib/domain/: __init__.py  alliances.py  base_domain.py  gen_alliance.py  gen_assets.py  gen_bookmarks.py  gen_calendar.py  gen_character.py  gen_clones.py  gen_contacts.py  gen_contracts.py  gen_corporation.py  gen_dogma.py  gen_faction_warfare.py  gen_fittings.py  gen_fleets.py  gen_incursions.py  gen_industry.py  gen_insurance.py  gen_killmails.py  gen_location.py  gen_loyalty.py  gen_mail.py  gen_market.py  gen_opportunities.py  gen_planetary_interaction.py  gen_routes.py  gen_search.py  gen_skills.py  gen_sovereignty.py  gen_status.py  gen_universe.py  gen_user_interface.py  gen_wallet.py  gen_wars.py
src/esilib/templates/: client.py
