[metadata]
name = esilib
version = 0.0.1
author = Giacomo Furlan
author_email = opensource@giacomofurlan.name
description = Library to interact with the EVE Online ESI API interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elegos/python-esilib
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Simulation
keywords = eve online, esi, api, rest, oauth2

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
python_requires = >=3.7

[options.packages.find]
where = src

[pep8]
max-line-length = 99

[pycodestyle]
max-line-length = 99
exclude = src/esilib/templates
